day-2/Project-3-Microservice-Communication/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-web
  template:
    metadata:
      labels:
        app: frontend-web
    spec:
      containers:
        - name: web
          image: curlimage/curl
          command: ["/bin/sh"]
          args: ["-c", "while true; do echo \"Frontend pod $(hostname) called Backend: $(curl -s http://backend-service)\; sleep 10; don"]
