day-2/Project-3-Microservice-Communication/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    app: frontend-web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
